# autodoc-harness

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/sample-repo/: .autodoc.yaml  README.md
examples/sample-repo/docs/: api-reference.md  architecture.md
examples/sample-repo/docs/.autodoc-harness/: component-map.json  review-report.json  run-manifest.json
examples/sample-repo/docs/.autodoc-harness/component-notes/: calculator-logic.json  cli-interface.json
examples/sample-repo/docs/modules/: calculator-logic.md  cli-interface.md
src/autodoc_harness/: agent_loop.py  budget.py  cli.py  config.py  coordinator.py  models.py  output_writer.py  templates.py
src/autodoc_harness/stages/: code_explorer.py  master_explorer.py  reviewer.py  synthesizer.py
src/autodoc_harness/tools/: base.py  grep_search.py  list_dir.py  read_file.py
tests/: test_agent_loop.py  test_budget.py  test_cli.py  test_code_explorer.py  test_config.py  test_coordinator.py  test_default_llm_call.py  test_default_structured_call.py  test_e2e_real_model.py  test_generate_e2e.py  test_master_explorer.py  test_output_writer.py  test_reviewer.py  test_synthesizer.py  test_tools.py
tests/fixtures/sample_repo/src/: calculator.py  main.py
